<resources>
    <string name="app_name">Ryady</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="hi_welcome">Hi Welcome 👋🏻</string>
    <string name="discounts">Discounts</string>
    <string name="hot_deals">Hot Deals</string>
    <string name="product_image">product image</string>
    <string name="products">Products</string>

    <string name="add_to_cart">Add To Cart</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="gps_is_disabled_do_you_want_to_enable_it">GPS is disabled. Do you want to enable it?</string>

    <string name="brands">Brands</string>
    <string name="category">Category</string>
    <string name="home">Home</string>
    <string name="categories">CATEGORIES</string>
    <string name="exit">Exit</string>
    <string name="retry">Retry</string>
    <string name="sing_up">Sing Up</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">don\'t have an account?</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="total_amount">Total amount</string>
    <string name="subtotal_amount">Sub total</string>
    <string name="tax">Tax</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="delete">Delete</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="payment_method">Payment Method</string>
    <string name="another_phone">Another Phone\n</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="credit_card">Credit Card</string>
    <string name="next">Next</string>
    <string name="customer_info">Customer Info</string>
    <string name="order_info">Order Info</string>
    <string name="address">Address</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="location">Location</string>
    <string name="back">Back</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="favorite">Favorite</string>
    <string name="country">Country</string>
    <string name="language">Language</string>
    <string name="currency">Currency</string>
    <string name="about_us">About us</string>
    <string name="orders">Orders</string>
    <string name="settings">Settings</string>
    <string name="men">MEN</string>
    <string name="women">WOMEN</string>
    <string name="kids">KIDS</string>
    <string name="all">ALL</string>
    <string name="shoes">SHOES</string>
    <string name="t_shirts">T-SHIRTS</string>
    <string name="accessories">ACCESSORIES</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_register">Go to Register</string>
    <string name="n_a">N/A</string>
    <string name="new_address">New Address</string>
    <string name="save">Save</string>
    <string name="city">City</string>
    <string name="postal_code">Postal code</string>
    <string name="skip">Skip</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="login_sub_welcome_title">welcome back! Please login to access your account.</string>
    <string name="welcome_title">Hi, Welcome Back!👋</string>
    <string name="signup">Signup</string>
    <string name="logout">Logout</string>
    <string name="client">Client</string>
    <string name="total_number">Total Number</string>
    <string name="total_price">Total Price</string>
    <string name="verification_message">Please go to your Email and verify your Account after that Click Verified</string>
    <string name="verified">Verified</string>
    <string name="delete_confirmation">Delete Confirmation</string>
    <string name="delete_message">You are about to delete this Item\n Are you sure ? </string>
    <string name="add_new_address">Add New Address</string>
    <string name="email_alielsayedg_gmail_com"><![CDATA[Email: alielsayedg&#64;gmail.com]]></string>

</resources>