<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeScreen"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always"
        app:tooltipText="@string/home" />
    <item
        android:id="@+id/categoryScreen"
        android:icon="@drawable/ic_category"
        android:title="@string/category"
        app:showAsAction="always"
        app:tooltipText="@string/category" />
    <item
        android:id="@+id/favouriteFragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite"
        app:showAsAction="always"
        app:tooltipText="@string/category" />
</menu>