<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="375dp"
    android:layout_height="350dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:weightSum="5">
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/alert"
            android:layout_weight="2.25"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="16dp"
            android:textAlignment="center"
            android:text="@string/delete_confirmation"/>
  <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="@font/regular"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="16dp"
            android:textAlignment="textStart"
            android:text="@string/delete_message"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.25"
            android:backgroundTint="@android:color/holo_red_dark"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/delete"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.25"
            android:textSize="20sp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/cancel"/>

    </LinearLayout>


</androidx.cardview.widget.CardView>