<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.screens.order.view.Order"
    android:background="@color/primary">

    <!-- Toolbar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:paddingTop="?attr/actionBarSize">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back"
            app:subtitleTextAppearance="@font/regular"
            app:title="@string/order_info"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="24dp">

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="4dp"
            android:text="@string/address"
            android:textAlignment="center"
            android:textSize="24sp" />

        <!-- Customer Phone -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_customer_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textColorHint="@color/black"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="#0023AA"
            app:cursorColor="@color/black"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_location"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_customer_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_get_current_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingVertical="4dp"
            android:text="@string/get_current_location"
            android:textAlignment="textEnd"
            android:textColor="@color/secondary"
            android:textStyle="bold" />


        <!-- Payment Method -->
        <TextView
            android:id="@+id/tv_payment_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingVertical="4dp"
            android:text="@string/payment_method"
            android:textAlignment="center"
            android:textSize="24sp" />

        <com.skydoves.powerspinner.PowerSpinnerView
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="12dp"
            app:spinner_arrow_animate="true"
            app:spinner_arrow_gravity="end"
            app:spinner_arrow_tint="@color/secondary"
            app:spinner_popup_animation="dropdown"
            app:spinner_popup_background="@color/list_background"
            app:spinner_popup_elevation="2dp"
            app:spinner_selected_item_background="@color/list_background" />

    </LinearLayout>
    <!-- Cancel Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/secondary"
        android:padding="12dp"
        android:text="@string/cancel" />
    <!-- Next Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/secondary"
        android:padding="12dp"
        android:text="@string/next" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/product_glass_background"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</RelativeLayout>