<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="350dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:weightSum="5">
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/verify"
            android:layout_weight="2"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="17sp"
            android:fontFamily="@font/regular"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="16dp"
            android:textAlignment="textStart"
            android:text="@string/verification_message"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_verification"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/verified"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_red_dark"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/cancel"/>

    </LinearLayout>


</androidx.cardview.widget.CardView>